# beetup

./: .gitignore  README.md
backend/: .gitignore  README.md  beetup-backend.cabal  main.db-shm  main.db-wal
backend/app/: Main.hs
backend/assets/: demo.ics  test1.ics
backend/lib/: Availability.hs
backend/lib/Availability/: Parse.hs
backend/lib/Utils/: Datatypes.hs  DbInit.hs  Endpoint.hs  Functions.hs
backend/src/: Availability.hs  Main.hs
backend/src/Availability/: Parse.hs
backend/src/Core/: Availability.hs
backend/src/Core/Availability/: Parse.hs
backend/src/Domain/: User.hs
backend/src/Integration/: Database.hs  Datastore.hs  Init.hs  MeetingStore.hs  OccupancyStore.hs  UserStore.hs
backend/src/Presentation/: Authentication.hs  Calendar.hs  Login.hs  Meeting.hs  Occupancies.hs  User.hs
backend/src/Utils/: Datatypes.hs  Functions.hs
backend/test/: Arbitraries.hs  AvailabilityTests.hs  Generators.hs  HelperFunctions.hs  TimeSlotTests.hs  test.hs
frontend/: README.md  elm.json  shell.nix
frontend/public/: index.html  styles.css
frontend/src/: Main.elm  Models.elm
frontend/src/Pages/: Availability.elm  CreateMeeting.elm  Home.elm  Login.elm  Meeting.elm
frontend/src/Utils/: DateTime.elm
