cabal-version:      3.0
name:               beetup-backend
version:            0.1.0.0
license:            NONE
author:             Job Vonk, Silas Peters, Jort Willemsen
maintainer:         sticcpistt@icloud.com
category:           Web
build-type:         Simple

common warnings
    ghc-options: -Wall -Wno-name-shadowing

executable beetup-backend
    import:             warnings
    main-is:            Main.hs
    other-modules:      Integration.UserStore
                      , Integration.OccupancyStore
                      , Integration.MeetingStore
                      , Integration.Init
                      , Utils.Datatypes
                      , Utils.Functions
                      , Presentation.Authentication
                      , Presentation.User
                      , Presentation.Calendar
                      , Presentation.Occupancies
                      , Presentation.Meeting
                      , Core.Availability
                      , Core.Availability.Parse
    default-extensions: OverloadedStrings
                      , ViewPatterns
                      , DuplicateRecordFields
    build-depends:      base ^>=4.17.2.0
                      , twain
                      , warp
                      , text
                      , containers
                      , aeson
                      , http-types
                      , persistent
                      , persistent-sqlite
                      , persistent-template
                      , time
                      , mtl
                      , password
                      , uuid
                      , iCalendar >= 0.4.1.1
                      , bytestring
                      , data-default
    hs-source-dirs:     src
    default-language:   Haskell2010
