cabal-version:      3.0
name:               beetup-backend
version:            0.1.0.0
license:            NONE
author:             Job Vonk, Silas Peters, Jort Willemsen
maintainer:         sticcpistt@icloud.com
category:           Web
build-type:         Simple

common warnings
    ghc-options: -Wall -Wno-name-shadowing

executable beetup-backend
    import:             warnings
    main-is:            Main.hs
    other-modules:      Integration.UserStore
                      , Integration.OccupancyStore
                      , Integration.MeetingStore
                      , Integration.Init
                      , Utils.Datatypes
                      , Utils.Functions
                      , Utils.Endpoint
                      , Presentation.Authentication
                      , Presentation.User
                      , Presentation.Calendar
                      , Presentation.Occupancies
                      , Presentation.Meeting
                      , Core.Availability
                      , Core.Availability.Parse
    default-extensions: OverloadedStrings
                      , ViewPatterns
                      , DuplicateRecordFields
    build-depends:      base ^>=4.17.2.0
                      , twain
                      , warp
                      , text
                      , containers
                      , aeson
                      , http-types
                      , persistent
                      , persistent-sqlite
                      , persistent-template
                      , time
                      , mtl
                      , password
                      , uuid
                      , iCalendar >= 0.4.1.1
                      , bytestring
                      , data-default
                      , monad-logger
                      , resource-pool
                      , conduit
    hs-source-dirs:     src
    default-language:   Haskell2010

test-suite beetup-backend-test
  type: exitcode-stdio-1.0
  main-is: test.hs
  other-modules:
      HelperFunctions
      AvailabilityTests
  hs-source-dirs: test
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      Unique >=0.4.7.9
    , base >=4.7 && <5
    , containers >=0.7
    , beetup-backend
    , tasty >=1.5.3
    , tasty-quickcheck >=0.1.11.1
  default-language: Haskell2010
